src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>comment__c</fullName>
        <label>comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <nameField>
        <displayFormat>S-{00}</displayFormat>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Comment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(comment__c )   &lt; 10</errorConditionFormula>
        <errorMessage>Comment at least 10 characters.</errorMessage>
    </validationRules>
</CustomObject>